--- a/TaskManagement/Web.config
+++ b/TaskManagement/Web.config
@@ -62,6 +62,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="TestEntities" connectionString="metadata=res://*/Models.TaskList.csdl|res://*/Models.TaskList.ssdl|res://*/Models.TaskList.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=BERCA-SELWIN;initial catalog=Test;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TestEntities" connectionString="metadata=res://*/Models.TaskList.csdl|res://*/Models.TaskList.ssdl|res://*/Models.TaskList.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Test;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
